# umlwork

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  activites.puml.txt  alembic.ini  cas_utilisation.puml.txt  classes.puml.txt  docker-compose.yml  pyproject.toml  sequence.puml.txt
.github/workflows/: ci.yml
app/: config.py  database.py  main.py
app/api/: campagnes.py  donateurs.py  dons.py  paiements.py  recus.py
app/models/: __init__.py  campagne.py  don.py  donateur.py  paiement.py  recu.py
app/schemas/: campagne.py  don.py  donateur.py  paiement.py  recu.py
app/services/: email.py  paiement.py
app/tests/: conftest.py  test_api.py
docs/: api.md  architecture.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py
